# CIEDPC-Custom-Independent-Event-Driven-Programming-Core

./: .gitignore  README.md
docs/: arch-design.md  planning.md  to-do.md  user-manual.md
sources/app/: app.c
sources/app/config/: app_cfg.h
sources/app/declaration/: app.cpp  app_decl.h
sources/common/container/fifo/: fifo.c  fifo.h
sources/common/container/queue/: queue.c  queue.h
sources/common/container/ring_buffer/: ring_buffer.h
sources/core/inc/: ciedp_task.h  ciedpc_core.h  ciedpc_fsm.h  ciedpc_itnlog.h  ciedpc_msg.h  ciedpc_task.h  ciedpc_timer.h  ciedpc_tsm.h
sources/core/src/: ciedpc_fsm.c  ciedpc_itnlog.c  ciedpc_msg.c  ciedpc_task.c  ciedpc_timer.c  ciedpc_tsm.c
sources/pal/: pal_core.h
sources/pal/arch/linux/: linux_arch.c  linux_arch.h
sources/pal/service/memrp/: pal_memrp.c  pal_memrp.h
sources/pal/service/timer/: pal_timer.h
sources/test/: CMakeLists.txt  test.c  test.h  timespecs_test  timespecs_test.c
sources/test/test01/: CMakeLists.txt  test.c
sources/test/test02/: CMakeLists.txt  test.c
sources/test/test03/: CMakeLists.txt  test.c
